--- a/UISearchControllerDeme/CustomTableViewCell.xib
+++ b/UISearchControllerDeme/CustomTableViewCell.xib
@@ -19,47 +19,47 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hA8-cE-1Cd">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayx-3r-upf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朋友圈" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pFK-8Q-98v">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朋友圈" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ad-Sa-cP5">
                                 <rect key="frame" x="30.5" y="73" width="52" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PE7-Ob-xbR">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文章" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GB2-fP-cxt">
                                 <rect key="frame" x="142.5" y="73" width="35" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="公众号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sI6-Wq-xGu">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="公众号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqM-wk-7jF">
                                 <rect key="frame" x="237.5" y="73" width="52" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小说" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44J-p8-6F7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小说" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6K-8Q-twG">
                                 <rect key="frame" x="47.5" y="134" width="35" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="音乐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbT-Ec-xQN">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="音乐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWn-Sb-Kom">
                                 <rect key="frame" x="142.5" y="134" width="35" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="表情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0G7-AE-OUS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="表情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brb-MU-IkZ">
                                 <rect key="frame" x="237.5" y="134" width="35" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.086274509799999996" green="0.63137254899999995" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="搜索指定内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzk-GP-unc">
-                                <rect key="frame" x="117.5" y="26" width="86" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="搜索指定内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5g1-NG-TkA">
+                                <rect key="frame" x="117" y="26" width="86" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -67,32 +67,31 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="sI6-Wq-xGu" firstAttribute="leading" secondItem="PE7-Ob-xbR" secondAttribute="trailing" constant="60" id="6aq-s6-KgS"/>
-                            <constraint firstItem="sI6-Wq-xGu" firstAttribute="top" secondItem="PE7-Ob-xbR" secondAttribute="top" id="A2d-nk-sIT"/>
-                            <constraint firstItem="Pzk-GP-unc" firstAttribute="centerX" secondItem="hA8-cE-1Cd" secondAttribute="centerX" id="Ary-kn-mRy"/>
-                            <constraint firstItem="Pzk-GP-unc" firstAttribute="top" secondItem="hA8-cE-1Cd" secondAttribute="top" constant="26" id="LSr-kp-H3P"/>
-                            <constraint firstItem="PE7-Ob-xbR" firstAttribute="top" secondItem="Pzk-GP-unc" secondAttribute="bottom" constant="30" id="aeK-aD-Jcc"/>
-                            <constraint firstItem="PE7-Ob-xbR" firstAttribute="leading" secondItem="pFK-8Q-98v" secondAttribute="trailing" constant="60" id="amv-Xz-Dgh"/>
-                            <constraint firstItem="44J-p8-6F7" firstAttribute="top" secondItem="pbT-Ec-xQN" secondAttribute="top" id="asu-V5-ZJS"/>
-                            <constraint firstItem="pbT-Ec-xQN" firstAttribute="centerX" secondItem="hA8-cE-1Cd" secondAttribute="centerX" id="gX6-YU-Td6"/>
-                            <constraint firstItem="0G7-AE-OUS" firstAttribute="top" secondItem="pbT-Ec-xQN" secondAttribute="top" id="h0A-LR-Dvw"/>
-                            <constraint firstItem="PE7-Ob-xbR" firstAttribute="centerX" secondItem="hA8-cE-1Cd" secondAttribute="centerX" id="j1h-qj-32P"/>
-                            <constraint firstItem="pbT-Ec-xQN" firstAttribute="leading" secondItem="44J-p8-6F7" secondAttribute="trailing" constant="60" id="mCq-ju-w1a"/>
-                            <constraint firstItem="0G7-AE-OUS" firstAttribute="leading" secondItem="pbT-Ec-xQN" secondAttribute="trailing" constant="60" id="rkj-uC-iCK"/>
-                            <constraint firstItem="pFK-8Q-98v" firstAttribute="top" secondItem="PE7-Ob-xbR" secondAttribute="top" id="wFD-YS-6KX"/>
-                            <constraint firstItem="pbT-Ec-xQN" firstAttribute="top" secondItem="PE7-Ob-xbR" secondAttribute="bottom" constant="40" id="zYW-QH-dKy"/>
+                            <constraint firstItem="TWn-Sb-Kom" firstAttribute="leading" secondItem="q6K-8Q-twG" secondAttribute="trailing" constant="60" id="5Uz-OC-Dp8"/>
+                            <constraint firstItem="2ad-Sa-cP5" firstAttribute="top" secondItem="GB2-fP-cxt" secondAttribute="top" id="5zw-hm-Hfa"/>
+                            <constraint firstItem="fqM-wk-7jF" firstAttribute="leading" secondItem="GB2-fP-cxt" secondAttribute="trailing" constant="60" id="DhE-Vz-wbd"/>
+                            <constraint firstItem="fqM-wk-7jF" firstAttribute="top" secondItem="GB2-fP-cxt" secondAttribute="top" id="EQD-yf-fl7"/>
+                            <constraint firstItem="GB2-fP-cxt" firstAttribute="top" secondItem="5g1-NG-TkA" secondAttribute="bottom" constant="30" id="Hcv-pk-GM0"/>
+                            <constraint firstItem="5g1-NG-TkA" firstAttribute="centerX" secondItem="ayx-3r-upf" secondAttribute="centerX" id="M83-sa-ff3"/>
+                            <constraint firstItem="GB2-fP-cxt" firstAttribute="centerX" secondItem="ayx-3r-upf" secondAttribute="centerX" id="MHa-RN-cIq"/>
+                            <constraint firstItem="GB2-fP-cxt" firstAttribute="leading" secondItem="2ad-Sa-cP5" secondAttribute="trailing" constant="60" id="Otn-YR-GyO"/>
+                            <constraint firstItem="brb-MU-IkZ" firstAttribute="leading" secondItem="TWn-Sb-Kom" secondAttribute="trailing" constant="60" id="UyI-cu-pPA"/>
+                            <constraint firstItem="TWn-Sb-Kom" firstAttribute="centerX" secondItem="ayx-3r-upf" secondAttribute="centerX" id="W2w-eH-fID"/>
+                            <constraint firstItem="TWn-Sb-Kom" firstAttribute="top" secondItem="GB2-fP-cxt" secondAttribute="bottom" constant="40" id="XjK-uw-UP6"/>
+                            <constraint firstItem="5g1-NG-TkA" firstAttribute="top" secondItem="ayx-3r-upf" secondAttribute="top" constant="26" id="eg5-mI-i6i"/>
+                            <constraint firstItem="brb-MU-IkZ" firstAttribute="top" secondItem="TWn-Sb-Kom" secondAttribute="top" id="ktX-k3-C5m"/>
+                            <constraint firstItem="q6K-8Q-twG" firstAttribute="top" secondItem="TWn-Sb-Kom" secondAttribute="top" id="zpT-i6-llG"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Hox-NM-xW2"/>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="hA8-cE-1Cd" secondAttribute="bottom" id="1wR-rR-1iz"/>
-                    <constraint firstItem="hA8-cE-1Cd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7Xy-vU-9D8"/>
-                    <constraint firstItem="hA8-cE-1Cd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ftm-uH-Znq"/>
-                    <constraint firstAttribute="trailing" secondItem="hA8-cE-1Cd" secondAttribute="trailing" id="jR3-3z-slf"/>
+                    <constraint firstItem="ayx-3r-upf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="37J-9X-eJC"/>
+                    <constraint firstAttribute="bottom" secondItem="ayx-3r-upf" secondAttribute="bottom" id="9y7-60-j0k"/>
+                    <constraint firstItem="ayx-3r-upf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="GHC-K5-WEy"/>
+                    <constraint firstAttribute="trailing" secondItem="ayx-3r-upf" secondAttribute="trailing" id="VXi-yQ-sXD"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <viewLayoutGuide key="safeArea" id="eef-iT-Vz6"/>
             <point key="canvasLocation" x="-128" y="152"/>
         </tableViewCell>
     </objects>
